# Lisan

./: .gitignore  CHANGELOG.md  Draft 5.md  LICENSE  README.AGENTS.md  README.md  SPEC.md  WORKLOG-plumbing.md  config.example.json  config.example.yaml  config.yaml  install.sh  pyproject.toml  requirements.txt  tokencount.sh
.githooks/: commit-msg  post-commit  pre-commit
docs/: README.md  adjutant_daemon.md  adjutant_workorder.md  belief_formation.md  chat_performance.md  eval_harness.md  evidence_and_claims.md  exception_triage.md  feature_inventory.md  graph_retrieval.md  ground_truth_workorder.md  ingestion.md  jobs.md  live_eval.md  pattern_lifecycle.md  phase2_roadmap.md  provider_diagnostics.md  psyche_workorder.md  release_readiness_workorder.md  self_model_seed_evaluation.md  self_repair_workorder.md  ship2_enable_workorder.md  ship2_person_enrichment.md  vellum-assistant-review.md
evals/: EVALUATION_LOOP.md  baseline_run.py  capstone.py  driver.py  findings.md  grow_entity.py  judge.py  metrics.py  phase2-closing-report.md  phase2-status.md  rubric.py  scale_audit.py  scale_life.py  scale_run.py  timeshift.py  wipe_test.py
lisan/: __init__.py  __main__.py  cli.py  config.py  frontmatter.py  paths.py  prompts.py  schemas.py  utils.py
prompts/: adjutant_draft_v1.md  adjutant_research_v1.md  advice_v1.md  analyst_v1.md  assembler_v1.md  conversation_v1.md  dreamer_compress_v1.md  dreamer_confidence_v1.md  dreamer_contradict_v1.md  dreamer_epoch_v1.md  dreamer_hindsight_v1.md  dreamer_identity_anchor_v1.md  dreamer_overfitting_v1.md  dreamer_primer_v1.md  dreamer_reconcile_v1.md  elicitor_v1.md  interlocutor_v1.md  listener_v1.md  mode_router_v1.md  prediction_reconcile_v1.md  skeptic_v1.md  voice_extract_v1.md  writer_decision_v1.md  writer_decision_v2.md  writer_entity_story_v1.md  writer_entity_v1.md  writer_episode_artifacts_v1.md  writer_episode_core_v1.md  writer_episode_v1.md  writer_full_turn_v1.md  writer_knowledge_v1.md  writer_open_loop_v1.md  writer_open_loop_v2.md  writer_questions_v1.md  writer_state_v1.md
tests/: conftest.py  test_action_policy.py  test_adjutant_cycle.py  test_adjutant_daemon.py  test_adjutant_execute.py  (+99 more)
(+251 files in other folders)
