[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lisan"
version = "0.1.5"
description = "Lisan local-first memory vault CLI"
requires-python = ">=3.11"
readme = "README.md"
authors = [{name = "Lisan Contributors"}]

[project.scripts]
lisan = "lisan.cli:main"

[tool.setuptools]
packages = ["lisan", "lisan.providers", "lisan.tools", "lisan.agents", "lisan.schemas", "lisan.evals"]

[tool.setuptools.package-data]
"lisan.schemas" = ["*.json"]
