[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "lisan"
version = "26.7.3"
description = "Lisan local-first memory vault CLI"
requires-python = ">=3.11"
readme = "README.md"
authors = [{name = "Lisan Contributors"}]
dependencies = [
    "fastembed>=0.3.0",
]

[project.optional-dependencies]
# In-process semantic embeddings (Qdrant FastEmbed, ONNX, CPU-only, no torch).
# Kept as a compatibility alias; the core install now includes fastembed by default.
embeddings = ["fastembed>=0.3.0"]
pdf = ["pymupdf>=1.24.0"]
test = ["pytest>=8.0"]

[project.scripts]
lisan = "lisan.cli:main"

[tool.setuptools]
packages = ["lisan", "lisan.providers", "lisan.tools", "lisan.agents", "lisan.schemas"]

[tool.setuptools.package-data]
"lisan.schemas" = ["*.json"]
